Remove test params for twitch-dl

--- a/media/twitch-dl.yaml
+++ b/media/twitch-dl.yaml
@@ -13,9 +13,7 @@ spec:
           imagePullPolicy: Always
           args: 
             - "-P"
-            - "/library/twitch/test"
-            - "--download-sections"
-            - "*6000-6060"
+            - "/library/twitch"
             - "--exec"
             - 'set -x && ffmpeg -f lavfi -i "movie=%(filepath)q[out0+subcc]" %(filepath)q.srt -y && sed -i.sed s/\\\\h//g %(filepath)q.srt'
             - "https://www.twitch.tv/videos/1611392068"
