--- a/media/twitch-dl.yaml
+++ b/media/twitch-dl.yaml
@@ -12,11 +12,14 @@ spec:
           image: "ghcr.io/bo0tzz/yt-dlp:latest"
           imagePullPolicy: Always
           args: 
+            - "--newline"
             - "-P"
+            - "--download-sections"
+            - "*890-"
             - "/library/twitch"
             - "--exec"
-            - 'set -x && ffmpeg -f lavfi -i "movie=%(filepath)q[out0+subcc]" %(filepath)q.srt -y && sed -i.sed s/\\\\h//g %(filepath)q.srt'
-            - "https://www.twitch.tv/videos/1611392068"
+            - 'set -x && ffmpeg -f lavfi -i "movie=%(filepath)q[out0+subcc]" %(filepath)q.srt -y && sed -i.sed s/\\\\h//g %(filepath)q.srt && ffmpeg -itsoffset -1 -i %(filepath)q.srt %(filepath)q.srt'
+            - "https://www.twitch.tv/videos/1623606509"
           volumeMounts:
             - name: library
               mountPath: /library
