--- a/renovate.json
+++ b/renovate.json
@@ -17,6 +17,20 @@
       "\\.yaml$"
     ]
   },
+  "regexManagers": [
+    {
+      "fileMatch": [
+        "\\.yaml$"
+      ],
+      "matchStrings": [
+        // generic matcher
+        // see https://regex101.com/r/fzaLfV/1
+        "datasource=(?<datasource>docker) image=(?<depName>\\S+)\n.*?\"?(?<currentValue>[^-\\s]*?)\"?\n",
+        "datasource=(?<datasource>github-releases) repos=(?<depName>\\S+)\n.*?\"?(?<currentValue>[^\s\\]*?)\"?\n",
+      ],
+      "versioningTemplate": "docker"
+    }
+  ],
   "packageRules": [
     {
       "matchDatasources": [
