--- a/renovate.json
+++ b/renovate.json
@@ -26,7 +26,7 @@
         // generic matcher
         // see https://regex101.com/r/fzaLfV/1
         "datasource=(?<datasource>docker) image=(?<depName>\\S+)\n.*?\"?(?<currentValue>[^-\\s]*?)\"?\n",
-        "datasource=(?<datasource>github-releases) repos=(?<depName>\\S+)\n.*?\"?(?<currentValue>[^\s\\]*?)\"?\n",
+        "datasource=(?<datasource>github-releases) repos=(?<depName>\\S+)\n.*?\"?(?<currentValue>[^\\s]*?)\"?\n",
       ],
       "versioningTemplate": "docker"
     }
