Actually persist prometheus data

--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -34,13 +34,15 @@ spec:
       prometheusSpec:
         serviceMonitorSelectorNilUsesHelmValues: false
         podMonitorSelectorNilUsesHelmValues: false
-        volumeClaimTemplate:
-          spec:
-            storageClassName: zfs-iscsi
-            accessModes: ["ReadWriteOnce"]
-            resources:
-              requests:
-                storage: 50Gi
+        retention: 31d
+        storageSpec:
+          volumeClaimTemplate:
+            spec:
+              storageClassName: zfs-iscsi
+              accessModes: ["ReadWriteOnce"]
+              resources:
+                requests:
+                  storage: 50Gi
         additionalScrapeConfigs:
           - job_name: 'apcups'
             static_configs:
