Exclude flux-system from standard renovate updates

--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,8 @@
   "kubernetes": {
     "fileMatch": [
       "\\.yaml$"
-    ]
+    ],
+    "ignorePaths": [ "**/flux-system/**" ]
   },
   "flux": {
     "fileMatch": [
