Set flux to update CRDs on kube-prometheus-stack upgrade

--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -14,6 +14,8 @@ spec:
         name: prometheus-community
         namespace: monitoring
       interval: 1h
+  upgrade:
+    crds: CreateReplace
   values:
     grafana:
       ingress:
