--- a/media/radarr.yaml
+++ b/media/radarr.yaml
@@ -23,6 +23,10 @@ spec:
         ports:
           http:
             port: 7878
+    dnsConfig:
+      options:
+        - name: ndots
+          value: "1"
     podSecurityContext:
       runAsUser: 568
       runAsGroup: 568
