--- a/apps/calibre.yaml
+++ b/apps/calibre.yaml
@@ -7,22 +7,16 @@ spec:
   interval: 1h
   chart:
     spec:
-      chart: app-template
-      version: 0.2.2
+      chart: calibre-web
+      version: '8.4.2'
       sourceRef:
         kind: HelmRepository
-        name: bjw-s-charts
+        name: k8s-at-home
         namespace: applications
       interval: 1h
   values:
     image:
-      repository: ghcr.io/bjw-s/calibre-web
-      tag: 0.6.19@sha256:e3ea15ef5c62482781c8671c029ace3125e965bf351c2b2e5cba4f178f1b27a8
-    service:
-      main:
-        ports:
-          http:
-            port: 8083
+      tag: "0.6.18"
     env:
       PUID: "501"
       PGID: "50"
