--- a/apps/miniflux.yaml
+++ b/apps/miniflux.yaml
@@ -26,14 +26,22 @@ spec:
   interval: 1h
   chart:
     spec:
-      chart: miniflux
-      version: '5.1.2'
+      chart: app-template
+      version: 0.2.2
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home
+        name: bjw-s-charts
         namespace: applications
       interval: 1h
   values:
+    image:
+      repository: miniflux/miniflux
+      tag: 2.0.39
+    service:
+      main:
+        ports:
+          http:
+            port: 8080
     postgresql:
       enabled: false
     env:
