--- a/apps/miniflux.yaml
+++ b/apps/miniflux.yaml
@@ -35,7 +35,7 @@ spec:
       interval: 1h
   values:
     image:
-      repository: miniflux/miniflux
+      repository: ghcr.io/miniflux/miniflux
       tag: 2.0.39
     service:
       main:
