--- a/apps/calibre.yaml
+++ b/apps/calibre.yaml
@@ -47,6 +47,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-prod
           external-dns.alpha.kubernetes.io/target: bo0tzz.me
           nginx.ingress.kubernetes.io/proxy-body-size: "0"
+          nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
         hosts:
           - host: calibre.bo0tzz.me
             paths:
