--- a/apps/libreddit.yaml
+++ b/apps/libreddit.yaml
@@ -43,6 +43,7 @@ spec:
         tls:
           - hosts:
               - *host
+            secretName: libreddit-web-tls
 
     probes:
       liveness: &probes
