Quote secret value

--- a/apps/mayhem_chatbot/secret.yaml
+++ b/apps/mayhem_chatbot/secret.yaml
@@ -7,15 +7,15 @@ type: Opaque
 stringData:
     BOT_TOKEN: ENC[AES256_GCM,data:QNeTm2MLQBm+Gv7qDuHkFn+9L5d2RMWfTFsw6UW+QhaOBR1C6fr67MlxLADAIw==,iv:U44D21/g0HIj9NdRf4m1t2USXfF7uFEBSBtIUyigDe8=,tag:OA3pohuo6fYX3kNeDWf9Cg==,type:str]
     OPENAI_API_KEY: ENC[AES256_GCM,data:zvTrtEe26TRVuAVbX4F0TqByDywit0iTwFqkWtCLNIZEGzpMbTGsHF/lpZpkmS6g7Yyg,iv:UxWE3gy0nPB/3XXB+6/xnwaL3CD73s//73TbXK3VX10=,tag:h1Vm/DyZWMCJ+YKAn2bkIg==,type:str]
-    CHATS_ALLOWLIST: ENC[AES256_GCM,data:q6r6451eDsVKjQ==,iv:Cm6cLhD7OJBqmb54epJFS450p1X6mU+9YjEtjWmewlM=,tag:SWYQHsczeurfjHtKXC72Dg==,type:int]
+    CHATS_ALLOWLIST: ENC[AES256_GCM,data:AO8SQvhMJSgdmQ==,iv:Er8bCUybf4hGyqke1A64gJgDkIpz6wmaqjqAwunWBpY=,tag:xBF8/chjlG1+H0S+Pn+OEw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-12-27T00:27:16Z"
-    mac: ENC[AES256_GCM,data:SmkXp5L3KtsLUhn1vNKcaNli5sRuC9rD5LjkXYhu2kyIjIAlr0l6pczL9/f48wVYuwFMIHeyI4B4KVLmZ7CUG0z1IYXbPdggskNdgzv0Tpb2lulQUXajNUt6Q7z4gNuO9kiavcZ1l3ZIrw/u+68XANqTZZnUAxDz5Jql/iIfp9I=,iv:RlVbcyTHDV0zsj1I7m4jD0Urp3vNHqcYch3kE+fWzb8=,tag:YtDqFdg0fX4Y3WZ9TF+Z0A==,type:str]
+    lastmodified: "2022-12-27T00:30:50Z"
+    mac: ENC[AES256_GCM,data:jI1CX1UYtmd0eO58bDt9FwyKLuvcJsiV5EhqIArA2UYHwKwxj1MP/k/+FEteYuZzHT7RIVzvVsiFN2gIjLyYyjFJitxV+hTnwAIW0T/ruEmYAWaAXF2V8T751jhBZA4quKVqZbupzkdbhhoqQdmLdehmAbKSUW5ILeAhqcvCkjA=,iv:kjzVme7BzsWzXhFGoCVZOigA490q15/lJVz/CNR5Zm0=,tag:l6yGBUT27bG74MM55mFnDA==,type:str]
     pgp:
         - created_at: "2022-06-23T13:53:25Z"
           enc: |
