--- a/apps/mayhem_chatbot/secret.yaml
+++ b/apps/mayhem_chatbot/secret.yaml
@@ -7,15 +7,15 @@ type: Opaque
 stringData:
     BOT_TOKEN: ENC[AES256_GCM,data:QNeTm2MLQBm+Gv7qDuHkFn+9L5d2RMWfTFsw6UW+QhaOBR1C6fr67MlxLADAIw==,iv:U44D21/g0HIj9NdRf4m1t2USXfF7uFEBSBtIUyigDe8=,tag:OA3pohuo6fYX3kNeDWf9Cg==,type:str]
     OPENAI_API_KEY: ENC[AES256_GCM,data:zvTrtEe26TRVuAVbX4F0TqByDywit0iTwFqkWtCLNIZEGzpMbTGsHF/lpZpkmS6g7Yyg,iv:UxWE3gy0nPB/3XXB+6/xnwaL3CD73s//73TbXK3VX10=,tag:h1Vm/DyZWMCJ+YKAn2bkIg==,type:str]
-    CHATS_ALLOWLIST: ENC[AES256_GCM,data:AO8SQvhMJSgdmQ==,iv:Er8bCUybf4hGyqke1A64gJgDkIpz6wmaqjqAwunWBpY=,tag:xBF8/chjlG1+H0S+Pn+OEw==,type:str]
+    CHATS_ALLOWLIST: ENC[AES256_GCM,data:JAFjmJ1c2aaPjCK5YB8fgE2XyPg9SZlmlA==,iv:qaEqFIG5yFBSKouSbHuCo9XF/G+MycN3rvGdgS+ZMXg=,tag:9Gh3+oHLZQBK/HBgwz8xow==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-12-27T00:30:50Z"
-    mac: ENC[AES256_GCM,data:jI1CX1UYtmd0eO58bDt9FwyKLuvcJsiV5EhqIArA2UYHwKwxj1MP/k/+FEteYuZzHT7RIVzvVsiFN2gIjLyYyjFJitxV+hTnwAIW0T/ruEmYAWaAXF2V8T751jhBZA4quKVqZbupzkdbhhoqQdmLdehmAbKSUW5ILeAhqcvCkjA=,iv:kjzVme7BzsWzXhFGoCVZOigA490q15/lJVz/CNR5Zm0=,tag:l6yGBUT27bG74MM55mFnDA==,type:str]
+    lastmodified: "2022-12-27T00:34:01Z"
+    mac: ENC[AES256_GCM,data:erzeHfF7qVAB82go8OZFejNDkGoBJ2T3iK9/6jEMxoaRVQu+lGsz8a/5VMf8F+bXoPNMJ2C+MgGKMAK2pUmmtdSJNdZ6zK3zXevoz1DS8i5hWF+BNqd59vYnQsxngdEwQckCpdhcqA1d7kczhkk6/mPRfVUOmpZUTrSiF0TkwCI=,iv:fegXDGjEAMOHeGLbdGceMWziM3qkcLXdWQxkbxpFmJo=,tag:YXbXIoN0KnzqK0lYgvIAbA==,type:str]
     pgp:
         - created_at: "2022-06-23T13:53:25Z"
           enc: |
