Fix printcam configmap volume spec

--- a/apps/printcam/deployment.yaml
+++ b/apps/printcam/deployment.yaml
@@ -45,9 +45,10 @@ spec:
               mountPath: /shared
       volumes:
         - name: nginx-config
-          configMap: printcam-config
-          items:
-            - key: nginx.conf
-              path: nginx.conf
+          configMap: 
+            name: printcam-config
+            items:
+              - key: nginx.conf
+                path: nginx.conf
         - name: shared
           emptyDir: {}
