--- a/apps/printcam/deployment.yaml
+++ b/apps/printcam/deployment.yaml
@@ -34,7 +34,9 @@ spec:
             - "-f"
             - "hls"
             - "-preset"
-            - "superfast"
+            - "ultrafast"
+            - "-tune"
+            - "zerolatency"
             - "-c:v"
             - "libx264"
             - "-b:v"
