Add port to yt_emby_sync container

--- a/media/yt-emby-sync.yaml
+++ b/media/yt-emby-sync.yaml
@@ -28,6 +28,8 @@ spec:
         - name: yt-emby-sync
           image: ghcr.io/bo0tzz/yt_emby_sync:main
           imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
           volumeMounts:
             - name: media
               mountPath: /media
