Set authentik-redis storageclass

--- a/infrastructure/auth/authentik.yaml
+++ b/infrastructure/auth/authentik.yaml
@@ -59,6 +59,8 @@ spec:
       enabled: false
     redis:
       enabled: true
+      global:
+        storageClass: zfs-iscsi
 
     prometheus:
       rules:
