--- a/infrastructure/auth/secret.yaml
+++ b/infrastructure/auth/secret.yaml
@@ -5,14 +5,20 @@ metadata:
     namespace: auth
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:DCZ1b8cnnFm0PGVzkQXzNOWLK/YqqiXAlaawuC5R7yWP/i2KwNteZ8hqRitP72HmDm91UEeNn5gcefwelbGEnw==,iv:VydUeJXk8rFsllFkwvHr5oH6rEj/IYt9KSEGRiJc5rI=,tag:L3FjLvBLPSuDvWrsIPc8SA==,type:str]
+    AUTHENTIK_EMAIL__HOST: ENC[AES256_GCM,data:U0hB/vXkMrjtP4bjeaCz0wM=,iv:KOdFEgpPp9bZ1MBns39303hr9Z/Pdc5HInRpssIr9Ho=,tag:Uhevu4shK5clhkJOQg67pQ==,type:str]
+    AUTHENTIK_EMAIL__PORT: ENC[AES256_GCM,data:ommD,iv:3hl+1j5pXQSLx6mq0kDvDJKx77+KiyTfGII3Uyd+tk8=,tag:mlDK+EG/2NY+yfRHItKGEA==,type:str]
+    AUTHENTIK_EMAIL__USE_TLS: ENC[AES256_GCM,data:GNEFrQ==,iv:QElL3jT32CEVCoNCI9v5pcBEmZdBzlUNmJWksYIhs30=,tag:0bQr3/WJJ2USyemPpYpkRg==,type:str]
+    AUTHENTIK_EMAIL__USERNAME: ENC[AES256_GCM,data:NVPu4hlJ9BYCDs0Y,iv:8ybzu+taz1bTU4+/i5HPeIxMOACEPEmfGCtg2aX3LBE=,tag:a0o6TwUtr6FSEC6DtguX/g==,type:str]
+    AUTHENTIK_EMAIL__PASSWORD: ENC[AES256_GCM,data:KZ//JJfDx1PLu0FCS6DACQ==,iv:umPhSdwtN5Q3yoFN4kIZx4J+1gUsFlDa4et3EgZsXWc=,tag:Loa140W/S9Asvf4Pq68N0w==,type:str]
+    AUTHENTIK_EMAIL__FROM: ENC[AES256_GCM,data:EvwkW/OCijW5vnxu8+E=,iv:jMORkTvePz9AYiOhkhHr4/s02FoMjC6qTXSIcyulA4g=,tag:bw0gytUoM3rfqz8I19YHLA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-01-09T14:10:14Z"
-    mac: ENC[AES256_GCM,data:/dvZZZ2R616Og1slWaPKUpGIqT8bElAf+vSarfWXfvKZYaFTYhuwZLBByz8PdUBArHHnaj0/+JuQx/BPA/Xev9j/DvmhRMvCzkgu+xwDaqHRfZrJ8yJF+KCRZB1PLAZLL3MUcDdiAwdi3vx5TvR3lWsnM3A/FztPpi+hLrE//g8=,iv:02mKRGX6K18sXqEuFcrsV5tW66eywKnveGVlHI1YQYk=,tag:HbEJZtejtm5YjkCA6TlpgQ==,type:str]
+    lastmodified: "2023-01-09T15:01:17Z"
+    mac: ENC[AES256_GCM,data:fsA090YVnhS1I9vhvnItiA+iXg5UlDNlNWcKinjfQuFOqw7ysalVjeOZrkLv322vUPoM5omIUuUoBXO3DBt3xqLpbdwRwBLy3F+SQDW5dtd2rtl7ZAkH5AQeVArpMfWXieKlbrpJ9YUXJOpr16osWbzUfJnS0+y22+M2QNQvSG8=,iv:WbjX/OxZvotTJjY7vWj28AcJiRJcw3mCp5div5Zk+tE=,tag:kVLFhjAW0gH+Wi1Nxr3omw==,type:str]
     pgp:
         - created_at: "2023-01-09T14:10:12Z"
           enc: |
