Add annotationFilter to external-dns

--- a/infrastructure/dns/external-dns.yaml
+++ b/infrastructure/dns/external-dns.yaml
@@ -31,3 +31,4 @@ spec:
     cloudflare:
       proxied: false
       secretName: cloudflare-api-token
+    annotationFilter: external-dns.alpha.kubernetes.io/exclude notin (true)
