Add wildcard for authentik-outpost ingress

--- a/infrastructure/auth/auth-ingress.yaml
+++ b/infrastructure/auth/auth-ingress.yaml
@@ -23,3 +23,13 @@ spec:
                 name: authentik
                 port:
                   name: http
+    - host: *.bo0tzz.me
+      http:
+        paths:
+          - path: /outpost.goauthentik.io
+            pathType: Prefix
+            backend:
+              service:
+                name: authentik
+                port:
+                  name: http
