--- a/apps/watery/service.yaml
+++ b/apps/watery/service.yaml
@@ -23,7 +23,7 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/auth-url: |-
       http://authentik.auth.svc.cluster.local/outpost.goauthentik.io/auth/nginx
-    nginx.ingress.kubernetes.io/auth-signin: "https://auth.bo0tzz.me/outpost.goauthentik.io/start?rd=$escaped_request_uri"
+    nginx.ingress.kubernetes.io/auth-signin: "https://auth.bo0tzz.me/outpost.goauthentik.io/start?rd=\$escaped_request_uri"
     nginx.ingress.kubernetes.io/auth-response-headers: |-
         Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
     nginx.ingress.kubernetes.io/auth-snippet: |
