--- a/apps/watery/service.yaml
+++ b/apps/watery/service.yaml
@@ -19,12 +19,9 @@ metadata:
   name: watery
   namespace: applications
   annotations:
+    auth.kube.bo0tzz.me/enabled: "true"
     kubernetes.io/ingress.class: nginx-internal
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
-    nginx.ingress.kubernetes.io/auth-signin: /outpost.goauthentik.io/start?rd=$escaped_request_uri
-    nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Host $http_host;
-    nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-internal-authentik-embedded-outpost-internal-ingress.auth.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
 spec:
   tls:
     - hosts:
