--- a/apps/tiddlywiki-boet/service.yaml
+++ b/apps/tiddlywiki-boet/service.yaml
@@ -19,6 +19,7 @@ metadata:
   name: tiddlywiki-boet
   namespace: applications
   annotations:
+    auth.kube.bo0tzz.me/enabled: "true"
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
     external-dns.alpha.kubernetes.io/target: bo0tzz.me
