--- a/media/ombi.yaml
+++ b/media/ombi.yaml
@@ -17,7 +17,7 @@ spec:
   values:
     image:
       repository: ghcr.io/linuxserver/ombi
-      tag: 4.22.5
+      tag: 4.35.2-development
     service:
       main:
         ports:
