--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -15,7 +15,7 @@ metadata:
   name: immich
   namespace: immich
 spec:
-  interval: 5m
+  interval: 1h
   chart:
     spec:
       chart: ./charts/apps/immich
@@ -23,7 +23,7 @@ spec:
         kind: GitRepository
         name: immich-charts
         namespace: immich
-      interval: 1m
+      interval: 1h
   values:
     postgres:
       enabled: false
