Revert "Change immich chart interval"
This reverts commit 100c24dadd5cda0da0bd49adad29e6eba3d0560c.

--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -15,7 +15,7 @@ metadata:
   name: immich
   namespace: immich
 spec:
-  interval: 1h
+  interval: 5m
   chart:
     spec:
       chart: ./charts/apps/immich
@@ -23,7 +23,7 @@ spec:
         kind: GitRepository
         name: immich-charts
         namespace: immich
-      interval: 1h
+      interval: 1m
   values:
     postgres:
       enabled: false
