Set flux force: enabled annotation on twitch dl

--- a/media/twitch-dl.yaml
+++ b/media/twitch-dl.yaml
@@ -3,6 +3,8 @@ kind: Job
 metadata:
   name: twitch-download
   namespace: media
+  annotations:
+    kustomize.toolkit.fluxcd.io/force: enabled
 spec:
   template:
     spec:
