--- a/flux-system/kustomization.yaml
+++ b/flux-system/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- gotk-components.yaml
-- gotk-sync.yaml
-- webhook-secret.yaml
-- webhook.yaml
-- ingress.yaml
+  - cluster-secrets.yaml
+  - gotk-components.yaml
+  - gotk-sync.yaml
+  - webhook-secret.yaml
+  - webhook.yaml
+  - ingress.yaml
