--- a/apps/imagebot/backup/secret.yaml
+++ b/apps/imagebot/backup/secret.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: applications
 type: Opaque
 stringData:
-  RESTIC_REPOSITORY: ${VOLSYNC_RESTIC_REPOSITORY}/imagebot
-  RESTIC_PASSWORD: ${VOLSYNC_RESTIC_PASSWORD}
-  AWS_ACCESS_KEY_ID: ${VOLSYNC_B2_KEY_ID}
-  AWS_SECRET_ACCESS_KEY: ${VOLSYNC_B2_KEY_SECRET}
+  RESTIC_REPOSITORY: "${VOLSYNC_RESTIC_REPOSITORY}/imagebot"
+  RESTIC_PASSWORD: "${VOLSYNC_RESTIC_PASSWORD}"
+  AWS_ACCESS_KEY_ID: "${VOLSYNC_B2_KEY_ID}"
+  AWS_SECRET_ACCESS_KEY: "${VOLSYNC_B2_KEY_SECRET}"
