Does this help?

--- a/database/minio/backup/backup.yaml
+++ b/database/minio/backup/backup.yaml
@@ -16,4 +16,4 @@ spec:
       monthly: 1
     copyMethod: Direct
     cacheStorageClassName: zfs-iscsi
-    cacheAccessModes: ReadWriteOnce
+    cacheAccessModes: ["ReadWriteOnce"]
