Set cacheAccessModes on imagebot backup

--- a/apps/imagebot/backup/backup.yaml
+++ b/apps/imagebot/backup/backup.yaml
@@ -17,3 +17,4 @@ spec:
     copyMethod: Clone
     volumeSnapshotClassName: zfs-iscsi
     cacheStorageClassName: zfs-iscsi
+    cacheAccessModes: ["ReadWriteOnce"]
