--- a/media/twitch-dl.yaml
+++ b/media/twitch-dl.yaml
@@ -17,11 +17,11 @@ spec:
             - "--newline"
             - "-P"
             - "/library/twitch"
-            - "--download-sections"
-            - "*890-"
-            - "--exec"
-            - 'set -x && ffmpeg -f lavfi -i "movie=%(filepath)q[out0+subcc]" %(filepath)q.srt -y && sed -i.sed s/\\\\h//g %(filepath)q.srt && ffmpeg -itsoffset -1 -i %(filepath)q.srt %(filepath)q.offset.srt'
-            - "https://www.twitch.tv/videos/1726571478"
+            # - "--download-sections"
+            # - "*890-"
+            # - "--exec"
+            # - 'set -x && ffmpeg -f lavfi -i "movie=%(filepath)q[out0+subcc]" %(filepath)q.srt -y && sed -i.sed s/\\\\h//g %(filepath)q.srt && ffmpeg -itsoffset -1 -i %(filepath)q.srt %(filepath)q.offset.srt'
+            - "https://www.twitch.tv/videos/1731675804"
           volumeMounts:
             - name: library
               mountPath: /library
