--- a/apps/home-assistant/esphome.yaml
+++ b/apps/home-assistant/esphome.yaml
@@ -27,6 +27,9 @@ spec:
       privileged: true
       allowPrivilegeEscalation: true
 
+    env:
+      ESPHOME_DASHBOARD_USE_PING: true
+
     service:
       main:
         ports:
