--- a/apps/home-assistant/helmrelease.yaml
+++ b/apps/home-assistant/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: home-assistant
-      version: '13.4.2'
+      version: "13.4.2"
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home
@@ -22,7 +22,7 @@ spec:
     persistence:
       config:
         enabled: true
-        storageClass: zfs-iscsi
+        existingClaim: home-assistant-config
     ingress:
       main:
         enabled: true
