--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -78,6 +78,7 @@ spec:
         repository: altran1502/immich-server
         tag: *immich-tag
     machine_learning:
+      replicas: 3
       image:
         repository: altran1502/immich-machine-learning
         tag: *immich-tag
