Bring vaultwarden volume into flux management

--- a/apps/vaultwarden/vaultwarden.yaml
+++ b/apps/vaultwarden/vaultwarden.yaml
@@ -29,7 +29,7 @@ spec:
     persistence:
       config:
         enabled: true
-        storageClass: zfs-iscsi
+        existingClaim: vaultwarden-config
     env:
       DATABASE_URL:
         valueFrom:
