--- a/apps/vaultwarden/backup.yaml
+++ b/apps/vaultwarden/backup.yaml
@@ -14,7 +14,7 @@ spec:
       daily: 2
       weekly: 1
       monthly: 1
-    copyMethod: Clone
+    copyMethod: Direct
     volumeSnapshotClassName: zfs-iscsi
     cacheStorageClassName: zfs-iscsi
     cacheAccessModes: ["ReadWriteOnce"]
