Revert "temp: Direct for vaultwarden backup"
This reverts commit 9fe25abafe7cc95627a9f259853b6be3d7140c52.

--- a/apps/vaultwarden/backup.yaml
+++ b/apps/vaultwarden/backup.yaml
@@ -14,7 +14,7 @@ spec:
       daily: 2
       weekly: 1
       monthly: 1
-    copyMethod: Direct
+    copyMethod: Clone
     volumeSnapshotClassName: zfs-iscsi
     cacheStorageClassName: zfs-iscsi
     cacheAccessModes: ["ReadWriteOnce"]
