--- a/infrastructure/storage/democratic-csi.yaml
+++ b/infrastructure/storage/democratic-csi.yaml
@@ -34,11 +34,14 @@ spec:
 
     controller:
       driver:
-        image: democraticcsi/democratic-csi:v1.8.1
+        image: ghcr.io/democratic-csi/democratic-csi:v1.8.1
 
     node:
       driver:
-        image: democraticcsi/democratic-csi:v1.8.1
+        image: ghcr.io/democratic-csi/democratic-csi:v1.8.1
+
+    csiProxy:
+      image: ghcr.io/democratic-csi/csi-grpc-proxy:v0.5.3
 
     storageClasses:
       - name: zfs-iscsi
