--- a/apps/angel-backups.yaml
+++ b/apps/angel-backups.yaml
@@ -32,7 +32,7 @@ spec:
     - ReadWriteMany
   nfs:
     server: 192.168.2.1
-    path: "/backup/misc/angel"
+    path: "/rpool/backup/misc/angel"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
