Always pull kobotools

--- a/apps/kobotools.yaml
+++ b/apps/kobotools.yaml
@@ -21,6 +21,7 @@ spec:
     image:
       repository: ghcr.io/bo0tzz/kobo-tools
       tag: main
+      pullPolicy: Always
     service:
       main:
         ports:
