Fix n8n config volume

--- a/apps/n8n/helmrelease.yaml
+++ b/apps/n8n/helmrelease.yaml
@@ -73,9 +73,9 @@ spec:
       runAsGroup: 568
       fsGroup: 568
       fsGroupChangePolicy: "OnRootMismatch"
-    volumeClaimTemplates:
-      - name: config
-        mountPath: /config
+    persistence:
+      config:
+        enabled: true
         accessMode: ReadWriteOnce
         size: 1Gi
         storageClass: zfs-iscsi
