--- a/apps/n8n/helmrelease.yaml
+++ b/apps/n8n/helmrelease.yaml
@@ -25,6 +25,7 @@ spec:
       N8N_PORT: &port 80
       N8N_METRICS: true
       DB_TYPE: postgresdb
+      N8N_LOG_LEVEL: debug
       DB_POSTGRESDB_HOST:
         valueFrom:
           secretKeyRef:
