--- a/apps/n8n/helmrelease.yaml
+++ b/apps/n8n/helmrelease.yaml
@@ -26,6 +26,8 @@ spec:
       N8N_METRICS: true
       DB_TYPE: postgresdb
       N8N_LOG_LEVEL: debug
+      DB_LOGGING_ENABLED: true
+      DB_LOGGING_OPTIONS: all
       DB_POSTGRESDB_HOST:
         valueFrom:
           secretKeyRef:
